--- a/main.css
+++ b/main.css
@@ -1,4 +1,6 @@
 body {
+  width: 100%;
+  height: 100vh;
   background-image: url(./imgs/Rasim.gif);
   background-position: center;
   background-repeat: no-repeat;
